tracing-wide/tests/ui/generic_params.stderr
error: #[message] does not support generic parameters (a message must be a concrete `'static` type)
 --> tests/ui/generic_params.rs:4:9
  |
4 | struct M<T> {
  |         ^^^
